--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,35 @@ name = "Ju3VEM"
 uuid = "1347c348-1bfd-4c3d-8882-6b82a363c4f2"
 authors = ["csellmann "]
 version = "0.1.0"
+
+[deps]
+Bumper = "8ce10254-0962-460f-a3d8-1f77fea1446e"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+Chairmarks = "0ca39b1e-fe0b-4e98-acfc-b1656634c4de"
+FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
+FixedSizeArrays = "3821ddf9-e5b5-40d5-8e25-6813ab96b5e2"
+Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
+JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
+LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+Meshes = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+SmallCollections = "2b935e18-93d6-40ac-ae34-fe54c09f00e1"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
+
+[compat]
+Bumper = "0.7.1"
+CairoMakie = "0.15.5"
+Chairmarks = "1.3.1"
+FastGaussQuadrature = "1.0.2"
+FixedSizeArrays = "1.2.0"
+Infiltrator = "1.9.3"
+JET = "0.9.19"
+LoopVectorization = "0.12.172"
+Makie = "0.24.5"
+Meshes = "0.54.3"
+OrderedCollections = "1.8.1"
+SmallCollections = "0.5.0"
+StaticArrays = "1.9.14"
+WriteVTK = "1.21.2"
