--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,12 @@ authors = ["csellmann "]
 version = "0.1.0"
 
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Bumper = "8ce10254-0962-460f-a3d8-1f77fea1446e"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Chairmarks = "0ca39b1e-fe0b-4e98-acfc-b1656634c4de"
 Collects = "08986516-18db-4a8b-8eaa-f5ef1828d8f1"
+Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 FixedSizeArrays = "3821ddf9-e5b5-40d5-8e25-6813ab96b5e2"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
@@ -17,6 +19,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Meshes = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
+Octavian = "6fd5a793-0b7e-452c-907f-f8bfe9c57db4"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
@@ -27,10 +30,12 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 
 [compat]
+BenchmarkTools = "1.6.0"
 Bumper = "0.7.1"
 CairoMakie = "0.15.5"
 Chairmarks = "1.3.1"
 Collects = "1.0.0"
+Dictionaries = "0.4.5"
 FastGaussQuadrature = "1.0.2"
 FixedSizeArrays = "1.2.0"
 Infiltrator = "1.9.3"
@@ -40,6 +45,7 @@ LinearAlgebra = "1.11.0"
 LoopVectorization = "0.12.172"
 Makie = "0.24.5"
 Meshes = "0.54.3"
+Octavian = "0.3.29"
 OrderedCollections = "1.8.1"
 Random = "1.11.0"
 Reexport = "1"
