--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ Bumper = "8ce10254-0962-460f-a3d8-1f77fea1446e"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Chairmarks = "0ca39b1e-fe0b-4e98-acfc-b1656634c4de"
 Collects = "08986516-18db-4a8b-8eaa-f5ef1828d8f1"
+DelaunayTriangulation = "927a84f5-c5f4-47a5-9785-b46e178433df"
 Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 FixedSizeArrays = "3821ddf9-e5b5-40d5-8e25-6813ab96b5e2"
@@ -24,6 +25,7 @@ OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SmallCollections = "2b935e18-93d6-40ac-ae34-fe54c09f00e1"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
@@ -35,6 +37,7 @@ Bumper = "0.7.1"
 CairoMakie = "0.15.5"
 Chairmarks = "1.3.1"
 Collects = "1.0.0"
+DelaunayTriangulation = "1.6.4"
 Dictionaries = "0.4.5"
 FastGaussQuadrature = "1.0.2"
 FixedSizeArrays = "1.2.0"
@@ -50,6 +53,7 @@ OrderedCollections = "1.8.1"
 Random = "1.11.0"
 Reexport = "1"
 SmallCollections = "0.5.0"
+SparseArrays = "1.11.0"
 StaticArrays = "1.9.14"
 Statistics = "1.11.1"
 Symbolics = "6.51.0"
