rhs_fix and added functionality

--- a/Project.toml
+++ b/Project.toml
@@ -26,6 +26,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SmallCollections = "2b935e18-93d6-40ac-ae34-fe54c09f00e1"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+Static = "aedffcd0-7271-4cad-89d0-dc628f76c6d3"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
@@ -54,6 +55,7 @@ Random = "1.11.0"
 Reexport = "1"
 SmallCollections = "0.5.0"
 SparseArrays = "1.11.0"
+Static = "1.2.0"
 StaticArrays = "1.9.14"
 Statistics = "1.11.1"
 Symbolics = "6.51.0"
