--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Collects = "08986516-18db-4a8b-8eaa-f5ef1828d8f1"
 DelaunayTriangulation = "927a84f5-c5f4-47a5-9785-b46e178433df"
 Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
+Ferrite = "c061ca5d-56c9-439f-9c0e-210fe06d3992"
 FixedSizeArrays = "3821ddf9-e5b5-40d5-8e25-6813ab96b5e2"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
@@ -30,6 +31,7 @@ Static = "aedffcd0-7271-4cad-89d0-dc628f76c6d3"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
+Tensorial = "98f94333-fa9f-48a9-ad80-1c66397b2b38"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 
 [compat]
@@ -41,6 +43,7 @@ Collects = "1.0.0"
 DelaunayTriangulation = "1.6.4"
 Dictionaries = "0.4.5"
 FastGaussQuadrature = "1.0.2"
+Ferrite = "1.1.0"
 FixedSizeArrays = "1.2.0"
 Infiltrator = "1.9.3"
 JET = "0.9.19"
@@ -59,4 +62,5 @@ Static = "1.2.0"
 StaticArrays = "1.9.14"
 Statistics = "1.11.1"
 Symbolics = "6.51.0"
+Tensorial = "0.18.12"
 WriteVTK = "1.21.2"
