--- a/Project.toml
+++ b/Project.toml
@@ -6,7 +6,6 @@ version = "0.1.0"
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Bumper = "8ce10254-0962-460f-a3d8-1f77fea1446e"
-CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Chairmarks = "0ca39b1e-fe0b-4e98-acfc-b1656634c4de"
 Collects = "08986516-18db-4a8b-8eaa-f5ef1828d8f1"
 DelaunayTriangulation = "927a84f5-c5f4-47a5-9785-b46e178433df"
@@ -20,6 +19,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 Octavian = "6fd5a793-0b7e-452c-907f-f8bfe9c57db4"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SmallCollections = "2b935e18-93d6-40ac-ae34-fe54c09f00e1"
@@ -29,12 +29,12 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 Tensorial = "98f94333-fa9f-48a9-ad80-1c66397b2b38"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 
 [compat]
 BenchmarkTools = "1.6.0"
 Bumper = "0.7.1"
-CairoMakie = "0.15.5"
 Chairmarks = "1.3.1"
 Collects = "1.0.0"
 DelaunayTriangulation = "1.6.4"
@@ -48,6 +48,7 @@ LinearAlgebra = "1.11.0"
 LoopVectorization = "0.12.172"
 Octavian = "0.3.29"
 OrderedCollections = "1.8.1"
+PrecompileTools = "1.2.1"
 Random = "1.11.0"
 Reexport = "1"
 SmallCollections = "0.5.0"
@@ -57,4 +58,5 @@ StaticArrays = "1.9.14"
 Statistics = "1.11.1"
 Symbolics = "6.51.0"
 Tensorial = "0.18.12"
+Test = "1.11.0"
 WriteVTK = "1.21.2"
